[package]
name = "revm-test"
version = "0.1.0"
edition = "2021"

[dependencies]
revm = { version = "8.0.0", features = ["ethersdb"] }
anyhow = "1.0.70"
tokio = { version = "1.29.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
ethers-core = "2.0"
ethers-providers = { version = "2.0", optional = false }
ethers-contract = { version = "2.0.14", default-features = false }
ethers = "2.0"

alloy-sol-types = { version = "0.7.0", default-features = false, features = [
    "std",
]}